# Bayesian_inference_for_NN

./: .gitignore  Makefile  README.md  app.py  example_main.py  example_test.py  learning.txt  pyproject.toml  requirements.txt  simple_regression_example.py  utils.py  visualize.py
Documentation/Pyesian/: index.html
HMCMetrics/: hypersearch-mnist.py  hypersearch-retinamnist.py
PyAce/: gym_runner.py  test_runner.py  unittest1_runner.py  unittest2_runner.py
PyAce/datasets/: Dataset.py  __init__.py  utils.py
PyAce/distributions/: DistributionSerializer.py  GaussianPrior.py  MultivariateNormalDiagPlusLowRank.py  Sampled.py  __init__.py
PyAce/dynamics/: DeepPilco.py  PolicyNN.py  __init__.py  control.py  deep_pilco.py
PyAce/nn/: BayesianModel.py  __init__.py
PyAce/optimizers/: ADAM.py  BBB.py  BSAM.py  FSVI.py  HMC.py  (+8 more)
application/: app.py  utils.py
demo/: api_demo.py  simple_example.py  test_on_MNIST.py
package/: gym_example.py  gym_example_1.py  hyperparameters_test.py  rl_test.py  robustness_test.py  simple_example.py  sklearn_test.py  test_on_MNIST.py  tf_dataset_test.py  unittest1.py  unittest2.py
src/: bayesianNN.py  data.py  hyperparameters.py  utils.py
static/: custom.py  rewards.py
templates/: index.html  reinforce.html  settings.html
test/: example_test.py  swag_test.py  swag_test_MNIST.py
tests/: __init__.py  gym_example_1.py  hyperparameters_test.py  plotter_test.py  robustness_test.py  simple_example.py  sklearn_test.py  tempCodeRunnerFile.py  tf_dataset_test.py  unittest1.py  unittest2.py
trash_folder/: SWAG.py  main.py  utils.py
(+206 files in other folders)
