[project]
name = "Pyesian"
version = "0.0.1.2"
description = "A framework for Bayesian Neural Nets"
readme = "README.md"
license = {text = "MIT License"}
requires-python = ">=3.5"

[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]

[project.urls]
Homepage = "https://github.com/HassenAissa/Bayesian_inference_for_NN"